--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "f30a3ecf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "from itertools import combinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "d3f44612",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "563e2985",
    "metadata": {},
    "outputs": [],
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "51c3b70c",
    "metadata": {},
    "outputs": [
@@ -525,7 +526,7 @@
        "19    Male            0            0          56  United-States   >50K  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "7a64afc3",
    "metadata": {},
    "outputs": [],
@@ -547,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "4054bb45",
    "metadata": {},
    "outputs": [
@@ -572,7 +573,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "c770436b",
    "metadata": {},
    "outputs": [
@@ -593,7 +594,7 @@
        "(4000, 15)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "9d0713a6",
    "metadata": {},
    "outputs": [],
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "a0659320",
    "metadata": {},
    "outputs": [
@@ -624,7 +625,7 @@
        "(3700, 15)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "e5ff18f4",
    "metadata": {},
    "outputs": [],
@@ -645,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "505cde87",
    "metadata": {},
    "outputs": [
@@ -877,7 +878,7 @@
        "9  <=50K  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "ac7e1dd3",
    "metadata": {},
    "outputs": [
@@ -898,7 +899,7 @@
        "(3700, 12)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "db4901af",
    "metadata": {},
    "outputs": [],
@@ -923,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "a68c30d6",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1336,7 @@
        "19           56  United-States   >50K  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "1f146bb4",
    "metadata": {},
    "outputs": [],
@@ -1363,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "7a3edc45",
    "metadata": {},
    "outputs": [
@@ -1775,7 +1776,7 @@
        "19   over-time  United-States   >50K  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1786,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "cefb6130",
    "metadata": {},
    "outputs": [],
@@ -1805,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "f0924bd4",
    "metadata": {},
    "outputs": [
@@ -2217,7 +2218,7 @@
        "19   over-time  United-States   >50K  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2228,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "91f5e62e",
    "metadata": {},
    "outputs": [],
@@ -2254,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "a27385b3",
    "metadata": {},
    "outputs": [
@@ -2846,7 +2847,7 @@
        "29  United-States  <=50K  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2857,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "6a6286be",
    "metadata": {},
    "outputs": [],
@@ -2875,7 +2876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "2b4856c1",
    "metadata": {},
    "outputs": [
@@ -3467,7 +3468,7 @@
        "29  United-States  <=50K  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3478,7 +3479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "9f5d3368",
    "metadata": {},
    "outputs": [],
@@ -3500,7 +3501,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "id": "0873f966",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df['Income'] = filtered_df['Income'].replace(['<=50K', '>50K'],\n",
+    "                                                     ['0', '1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "3b44010e",
    "metadata": {},
    "outputs": [
@@ -3510,7 +3522,7 @@
        "array(['Private', 'Self-employed', 'gov', 'Not-working'], dtype=object)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3521,7 +3533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "3cb2c18a",
    "metadata": {},
    "outputs": [
@@ -3531,7 +3543,7 @@
        "array(['HS-grad', 'AfterHS', 'BeforeHS', 'Grd', 'Bachelors'], dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3542,7 +3554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "id": "67257bf4",
    "metadata": {},
    "outputs": [
@@ -3552,7 +3564,7 @@
        "array(['Married', 'Never-married', 'Not-married'], dtype=object)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3563,7 +3575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "id": "ad285a7f",
    "metadata": {},
    "outputs": [
@@ -3574,7 +3586,7 @@
        "       'Exec-managerial'], dtype=object)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3585,11 +3597,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7b160eae",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age              4\n",
+       "type_employer    4\n",
+       "education        5\n",
+       "marital          3\n",
+       "occupation       5\n",
+       "race             5\n",
+       "sex              2\n",
+       "capital_gain     2\n",
+       "capital_loss     2\n",
+       "hr_per_week      3\n",
+       "country          2\n",
+       "income           2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "bb803bb0",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = filtered_df.iloc[:, -1:].mode()['income'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4b42c84b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<=50K'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9894ff20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1418\n",
+       "1    2282\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7495c998",
+   "metadata": {},
+   "source": [
+    "11 atts + income (labels) \\\n",
+    "Binary: country, capital loss, cappital gain, sex (4) \\\n",
+    "Ordered: age, education, hr_per_week (3) \\\n",
+    "Nominal: type_employer, martial, race, martial (4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36db5dbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class tree node for create a new node in tree\n",
+    "class Node(object):\n",
+    "    def __init__(self, attribute):\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        self.parent = None\n",
+    "        self.attribute = attribute\n",
+    "#         self.gini_index = 0\n",
+    "        self.label = 0\n",
+    "        self.positive_labels = 0\n",
+    "        self.negative_label = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "33df7c37",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/p9/tm2mxn7j5fzff5mb3cm_j_4hs7_h_l/T/ipykernel_30070/2623492026.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mBinaryDT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mgini_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/p9/tm2mxn7j5fzff5mb3cm_j_4hs7_h_l/T/ipykernel_30070/2623492026.py\u001b[0m in \u001b[0;36mBinaryDT\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mBinaryDT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mgini_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'self' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class BinaryDT(object):\n",
+    "    self.root = None\n",
+    "    self.min_sup = 3\n",
+    "    def gini_index(self, df):\n",
+    "        # get counting number for df\n",
+    "        count_0, count_1 = self.counting_label(df)\n",
+    "        # calculate calculate the gini_index for each node\n",
+    "        if count_0 == 0 or count_1 == 0:\n",
+    "            return 0\n",
+    "        total = count_0 + count_1\n",
+    "        gini_index = 1 - (count_0 / total)**2 - (count_1 / total)**2\n",
+    "        return gini_index\n",
+    "    \n",
+    "    def counting_label(self, df):\n",
+    "        counting = df['income'].value_counts().to_dict()\n",
+    "        \n",
+    "        return counting['0'], counting['1']\n",
+    "    \n",
+    "    def split(self, attributes_values, attribute_type):\n",
+    "        # attribute generate all posible left, right of a node\n",
+    "        # 0 binary, 1: orinal, 2: nominal\n",
+    "        # results = list of all potential outcomes: (left, right) tuple\n",
+    "        results = []\n",
+    "        if attribute_type == 0:\n",
+    "            g_left = attribute_values[0]\n",
+    "            g_right = attribute_values[1]\n",
+    "            results.append((g_left, g_right))\n",
+    "        elif attribute_type = 1\n",
+    "            # co the sort cai list xong roi increse dan dan\n",
+    "            # get all values of this attributes in order\n",
+    "            values = []\n",
+    "            for i in range(1, len(values) - 1):\n",
+    "                g_left = values[:i]\n",
+    "                g_right = values[i:]\n",
+    "                results.append((g_left, g_right))\n",
+    "        else:\n",
+    "            # gen combinations for left and set all - set(left)\n",
+    "            values = []\n",
+    "            for L in range(1, len(values) - 1):\n",
+    "                for com in combinations(values, L):\n",
+    "                    g_left = list(com)\n",
+    "                    g_right = list(set(values) - set(com))\n",
+    "                    results.append((g_left, g_right))        \n",
+    "        return results\n",
+    "    \n",
+    "    def stop(self, df, atts):\n",
+    "        # case 1: no more attribute\n",
+    "        count_0, count_1 = self.counting_label(df)\n",
+    "        if len(atts) == 0:\n",
+    "            return True\n",
+    "        # case 2: node is pure\n",
+    "        elif count_0 == 0 or count_1 == 0:\n",
+    "            return True\n",
+    "        # case 3: support below min sup\n",
+    "        elif count_0 < self.min_sup or count_1 < min_sup:\n",
+    "            return True\n",
+    "        return False\n",
+    "\n",
+    "    def find_best_split(self, df, attributes):\n",
+    "        parent_gini = self.gini_index(df)\n",
+    "        best_gini_list = []\n",
+    "        best_split_attrs = []\n",
+    "        for attribute in attributes:\n",
+    "            # for each attribute find all potential outcomes\n",
+    "            df_attribute = df[attribute]\n",
+    "            N = len(df_attribute.index)\n",
+    "            attribute_values = []\n",
+    "            p_split = self.split(attribute_values, attribute_type=0)\n",
+    "            max_gain = -100\n",
+    "            best_split_att = None\n",
+    "            for left, right in p_split:\n",
+    "                # calculate gini for this split\n",
+    "                # get sub df for left group \n",
+    "                df_left = df.loc[df[attribute].isin(left)]\n",
+    "                gini_left = self.gini_index(df_left)\n",
+    "                # get sub df for right group\n",
+    "                df_right = df.loc[df[attribute].isin(right)]\n",
+    "                gini_right = self.gini_index(df_right)\n",
+    "                # calculate weighted gini for each split and gain\n",
+    "                weighted_gini = (len(df_left.index) * gini_left + len(df_right.index) * gini_right) / N\n",
+    "                gain_gini = parent_gini - weighted_gini\n",
+    "                if gain_gini > max_gain:\n",
+    "                    # find best split for this attribute\n",
+    "                    max_gain = gain\n",
+    "                    best_split_att = (left, right)\n",
+    "                    \n",
+    "            best_gini_list.append(max_gain)\n",
+    "            best_split_attrs.append(best_split_att)\n",
+    "            \n",
+    "        best_gini = max(best_gini_list)\n",
+    "        best_attribute = attributes[attributes.index(best_gini)]\n",
+    "        best_split = best_split_attrs[attributes.index(best_gini)]\n",
+    "        return best_split, best_gini, best_attribute\n",
+    "        \n",
+    "    def classify(self, df):\n",
+    "        # classify by major voting\n",
+    "        label = df.iloc[:, -1:].mode()['income'][0]\n",
+    "        return label \n",
+    "        \n",
+    "    def tree_grow(self, df, atts):\n",
+    "#         if self.stop() == True:\n",
+    "#             node = Node()\n",
+    "#             node.label = self.classify(df)\n",
+    "#             return Node\n",
+    "#         else:\n",
+    "        if True:\n",
+    "            # calculate parent attribute\n",
+    "            \n",
+    "            split, gini, cond_att = self.find_best_split(df, atts)\n",
+    "            root = Node(cond_att)\n",
+    "            # find al\n",
+    "            # find all data for left, \n",
+    "            remain_atts = list(set(atts).remove(cond_att))\n",
+    "            g_left, g_right = split\n",
+    "            df_left = df.loc[df[cond_att].isin(g_left)]\n",
+    "            root.left = self.tree_grow(df_left, remain_atts)\n",
+    "            df_right = df.loc[df[cond_att].isin(g_right)]\n",
+    "            root.right = self.tree_grow(df_right, remain_atts)\n",
+    "        return root\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fc24b0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3"
+   ]
   }
  ],
  "metadata": {
