--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -6546,9 +6546,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "data",
    "language": "python",
-   "name": "nlp"
+   "name": "data"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6560,7 +6560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
